syntax = "proto3";
package authentication;

message SetConfigRequest {
  string new_config = 1;
}

message UserLoginRequest {
  string user_id = 1;
  string client_id = 2;
}

message UserCreateRequest {
  string email = 1;
  optional string password = 2;
  bool verify = 3;
}
message UserChangePass {
  string email = 1;
  optional string password = 2;
}

message UserDeleteRequest {
  string user_id = 1;
}

message SetConfigResponse {
  string updated_config = 1;
}

message UserLoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}
message UserDeleteResponse {
  string message = 1;
}
message UserCreateResponse {
  optional string password = 1;
}

service Authentication {
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse);
  rpc UserCreate(UserCreateRequest) returns (UserCreateResponse);
  rpc ChangePass(UserChangePass) returns (UserCreateResponse);
  rpc UserDelete(UserDeleteRequest) returns (UserDeleteResponse);
}
